[package]
name = "cooper"
version = "0.2.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/cooper-rs"
homepage = "https://github.com/fpagliughi/cooper-rs"
license = "MIT"
edition = "2021"
rust-version = "1.81"
readme = "README.md"
keywords = ["actors", "futures"]
categories = ["asynchronous", "concurrency"]
description = """
A simple, in-process, async Actor library for Rust.
"""

[features]
default = ["smol"]
smol = ["dep:smol"]
tokio = ["dep:tokio"]

[dependencies]
futures = "0.3"
async-channel = "2.3"
crossbeam-channel = "0.5"
smol = { version = "2.0", optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
reqwest = { version = "*", features = ["json"] }
serde_json = "1.0"

[[example]]
name = "tokio_runtime"
required-features = ["tokio"]

